# tender-prediction-agent

./: .gitignore  README.md  pyproject.toml
docs/: ARCH_OVERVIEW.md  CLEANUP.md  DEVELOPMENT.md  RAG_PIPELINE.md
src/: app.py  main.py  utils.py
src/core/: analyzer.py  config.py  extract.py  llm.py  rag.py  utils.py
src/ui/: chat.py  sidebar.py  styles.py
tests/: test_rag_high_fidelity.py  test_rag_tables.py
