[project]
name = "tender-prediction-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "imsasankvindamuri",email = "imsasankvindamuri@gmail.com"},
    {name = "Manojsammeta48",email = "sammetamanoj123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=1.3.0,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
