[project]
name = "tender-prediction-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "imsasankvindamuri",email = "imsasankvindamuri@gmail.com"},
    {name = "Manojsammeta48",email = "sammetamanoj123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (>=1.3.0,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "docling (>=2.93.0,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "sentence-transformers (>=5.5.0,<6.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "protobuf (>=3.20.0,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
